network-policy/base/global-policies/cluster.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: all-deny
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 10000.0
  types:
    - Ingress
    - Egress
  ingress:
    - action: Deny
  egress:
    - action: Allow
